--- a/StarterCode/assets/css/d3Style.css
+++ b/StarterCode/assets/css/d3Style.css
@@ -26,13 +26,13 @@
 /* font size dependent on radius, see app.js */
 .stateText {
   font-family: sans-serif;
-  fill: #fff;
+  fill: black;
   text-anchor: middle;
 }
 
 .stateCircle {
   fill: #89bdd3;
-  stroke: #e3e3e3;
+  stroke: #251b1b;
 }
 
 .chart {
